@@ -1,7 +1,8 @@
 7.6.0
- - C++20 concept for binary data: `pqxx::binary`.
- - Broader `std::span` support for binary data in C++20.
+ - C++20 concepts for binary data: `pqxx::binary` and `pqxx::binary_view`.
+ - Generalise binary strings to any contiguous range of `std::byte`.
  - Mark `zview` as a view and as a borrowed range.
+ - Save a copy step on string fields in `stream_to`.
 7.5.2
  - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
 7.5.1
